Korrekt svenska har aldrig skadat någon

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Kör:
 
 chipmunk-physics
 ----------------
-Är installerat som en git submodule och pekar på
+chipmunk-physics är installerat som en git submodule och pekar på
 https://github.com/xavierjurado/chipmunk-physics
 som i sin tur är en klon på det riktigta reposet som ligger på
 http://code.google.com/p/chipmunk-physics/
